--- a/index.html
+++ b/index.html
@@ -5,12 +5,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Demo E-commerce site</title>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    link:s
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"/>
+    
 </head>
 
 <body>
-    
+    <section id="header" >
+        <a href="#"> <img src="img/logo.png" class="logo" alt="logo"> </a>
+        <div>
+           <ul id="navbar">
+               <li> <a class="active" href="index.html"> Home </a> </li>
+               <li> <a href="shop.html"> Shop </a> </li>
+               <li> <a href="blog.html"> Blog </a> </li>
+               <li> <a href="about.html"> About </a> </li>
+               <li> <a href="contact.html"> Contact </a></li>
+               <li> <a href="cart.html" ><i class="fas fa-shopping-bag"></i></a></li>
+           </ul> 
+        </div>
+
+    </section>
+
 
     <script src="script.js"></script>
 </body>
