--- a/index.html
+++ b/index.html
@@ -35,7 +35,38 @@
        <button>Shop Now</button> 
     </section>
 
+    <section id="feature" class="section-p1">
+        <div class="fe-box">
+            <img src="img/features/f1.png" alt="" srcset="">
+            <h6>Free Shipping</h6>
+        </div>
+        <div class="fe-box">
+            <img src="img/features/f2.png" alt="" srcset="">
+            <h6>Online Order</h6>
+        </div>
+        <div class="fe-box">
+            <img src="img/features/f3.png" alt="" srcset="">
+            <h6>Save Money</h6>
+        </div>
+        <div class="fe-box">
+            <img src="img/features/f4.png" alt="" srcset="">
+            <h6>Promotion</h6>
+        </div>
+        <div class="fe-box">
+            <img src="img/features/f5.png" alt="" srcset="">
+            <h6>Happy Sell</h6>
+        </div>
+        <div class="fe-box">
+            <img src="img/features/f6.png" alt="" srcset="">
+            <h6>F24/7 Support</h6>
+        </div>
+    </section>
+    <section id="product1" class="section-p1" >
+        <h2>Featured Products</h2>
+    </section>
 
     <script src="script.js"></script>
 </body>
 </html>
+
+
