added hover effect on feature title

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         </div>
     </section>
     <section id="product1" class="section-p1" >
-        <h2>Featured Products</h2>
+        <h2><span class="span-title">F</span><span class="span-title">e</span><span class="span-title">a</span><span class="span-title">t</span><span class="span-title">u</span><span class="span-title">r</span><span class="span-title">e</span><span class="span-title">d</span><span class="span-title"> </span><span class="span-title">P</span><span class="span-title">r</span><span class="span-title">o</span><span class="span-title">d</span><span class="span-title">u</span><span class="span-title">c</span><span class="span-title">t</span><span class="span-title">s</span></h2>
         <p>Summer Collection New Modern Design</p>
         <div class="pro-container">
             <div class="pro">
