--- a/index.html
+++ b/index.html
@@ -418,6 +418,75 @@
             <h3>New Trendy Prints</h3>
         </div>
     </section>
+    <section id="newsletter" class="section-p1 section-m1">
+        <div class="newstext">
+            <h4>Sign Up For Newsletter</h4>
+            <p>Get E-mail updates about our latest shop and <span>special offers.</span></p>
+        </div>
+        <div class="form">
+            <input type="email" placeholder="Your email address" >
+            <button class="normal">Sign Up</button>
+        </div>
+    </section>
+    <footer class="section-p1">
+        <div class="col">
+            <img src="img/logo.png" alt="" srcset="">
+            <h4>
+                Contact
+            </h4>
+            <p>
+                <strong>Address</strong> Mirpur 13, Baieshteki, Dhaka1216
+            </p>
+            <p>
+                <strong>Phone</strong> 01234567890/1223434566
+            </p>
+            <p>
+                <strong>Hours</strong> 10,00-18.00. Mon - Sat
+            </p>
+            <div class="follow">
+                <h4>Follow us</h4>
+                <div class="icon">
+                    <i class="fab fa-facebook-f"></i>
+                    <i class="fab fa-twitter"></i>
+                    <i class="fab fa-instagram"></i>
+                    <i class="fab fa-pinterest"></i>
+                    <i class="fab fa-youtube"></i>
+                </div>
+            </div>
+        </div>
+        <div class="col">
+            <h4>About</h4>
+            <a href="#">About Us</a>
+            <a href="#">Privacy Policy</a>
+            <a href="#">Terms & Conditions</a>
+            <a href="#">Contact Us</a>
+        </div>
+        <div class="col">
+            <h4>My Account</h4>
+            <a href="#">Sign In</a>
+            <a href="#">View Cart</a>
+            <a href="#">My Wishlist</a>
+            <a href="#">Track My Order</a>
+            <a href="#">Help</a>
+        </div>
+        <div class="col install">
+            <h4>Install App</h4>
+            <p><From App Store or Google Play/p>
+                <div class="row">
+                    <img src="img/pay/app.jpg" alt="" srcset="">
+                    <img src="img/pay/play.jpg" alt="" srcset="">
+                </div>
+                <p>Secure Payment Gateways</p>
+                <img src="img/pay/pay.png" alt="" srcset="">
+        </div>
+       
+    </footer>
+    <div class="copyright">
+        <p>
+            ©️ 2022, All rights reaseved Muhammad Ibrahim  
+        </p>
+    </div>
+
     <script src="script.js"></script>
    
 </body>
